--- a/ispa-league-game-info.html
+++ b/ispa-league-game-info.html
@@ -38,8 +38,8 @@
       
       <!--<span id='goal-current'>0</span> / <span id='goal-total'>0</span>-->
 
-      K12 CHAMPIONS LEAGUE
-      <span class="highlighted-text">ROCKET LEAGUE</span>
+      K12 ACADEMY LEAGUE
+      <span class="highlighted-text">VALORANT</span>
 
     </span>
   </div>
