--- a/ispa-title.html
+++ b/ispa-title.html
@@ -41,7 +41,7 @@
       
       INSIGHT PA<br>
       CYBER CHARTER SCHOOL<br>
-      <span class="highlighted-text">ESPORTS</span>
+      <span class="highlighted-text">ESPORTS</span><br>
       POWERED BY STRIDE K12
 
     </span>
