--- a/ispa-title.html
+++ b/ispa-title.html
@@ -15,7 +15,7 @@
         .goal-cont {
             color: #ffffff;
             font-weight: bold;
-            background: center;
+            background: left;
             font-family: 'Tw Cen MT';
             font-size: 40px;
             text-align: center;
