--- a/ispa-title.html
+++ b/ispa-title.html
@@ -15,10 +15,9 @@
         .goal-cont {
             color: #ffffff;
             font-weight: bold;
-            background: left;
             font-family: 'Tw Cen MT';
             font-size: 40px;
-            text-align: center;
+            text-align: left;
             padding-top:10px;
         }
 
