--- a/ispa-title.html
+++ b/ispa-title.html
@@ -40,7 +40,7 @@
       
       <!--<span id='goal-current'>0</span> / <span id='goal-total'>0</span>-->
       
-      <span class="highlighted-text">INSIGHT PA</span><br>
+      <span class="line-one">INSIGHT PA</span><br>
       CYBER CHARTER SCHOOL<br>
       <span class="highlighted-text">ESPORTS</span><br>
       POWERED BY STRIDE K12
