--- a/ispa-title.html
+++ b/ispa-title.html
@@ -16,13 +16,12 @@
             color: #ffffff;
             font-weight: bold;
             font-family: 'Tw Cen MT';
-            font-size: 40px;
             text-align: left;
-            padding-top:10px;
+            line-height: 0px;
         }
 
         .highlighted-text {
-        color: #1d86c8
+            color: #1d86c8
         }
         
         .line-one {
