--- a/ispa-title.html
+++ b/ispa-title.html
@@ -17,7 +17,7 @@
             font-weight: bold;
             font-family: 'Tw Cen MT';
             text-align: left;
-            line-height: 0px;
+            line-height: 1.0;
         }
 
         .highlighted-text {
