--- a/ispa-esports.html
+++ b/ispa-esports.html
@@ -38,7 +38,7 @@
       
       <!--<span id='goal-current'>0</span> / <span id='goal-total'>0</span>-->
 
-      ISPA
+      INSIGHT PA
       <span class="highlighted-text">ESPORTS</span>
 
     </span>
