--- a/ispa-title.html
+++ b/ispa-title.html
@@ -35,7 +35,7 @@
         }
         
         .line-three {
-            font-size: 132px;
+            font-size: 125px;
             color: #1d86c8;
             margin-left: -7px;
             margin-top:-40px;
@@ -59,7 +59,7 @@
       
       <div class="line-one">INSIGHT PA</div><br>
       <div class="line-two"> CYBER CHARTER SCHOOL</div><br>
-      <div class="line-three">ESPORTS</div><br>
+      <div class="line-three">MS ESPORTS</div><br>
       <div class="line-four">POWERED BY STRIDE K12</div>
 
     </span>
