--- a/ispa-welcome-message.html
+++ b/ispa-welcome-message.html
@@ -10,11 +10,11 @@
 
         /* All html objects will be wrapped in the #wrap div */
 
-        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
         .goal-cont {
             color: #ffffff;
-            font-weight: bold;
+            
             background: center;
             font-family: 'Poppins', sans-serif;
             font-size: 40px;
