--- a/ispa-welcome-message.html
+++ b/ispa-welcome-message.html
@@ -19,11 +19,17 @@
             font-family: 'Poppins', sans-serif;
             font-size: 40px;
             text-align: center;
-            padding-top:10px;
+            padding-top: 10px;
         }
 
         .highlighted-text {
-        color: #1d86c8
+            color: #1d86c8;
+            
+            background: center;
+            font-family: 'Poppins', sans-serif;
+            font-size: 40px;
+            text-align: center;
+            padding-top: 10px;
         }
 
     </style>
@@ -48,7 +54,7 @@
       FOR THE SUPPORT !
 
     </span>
-  </div>
+ </div>
     
 </body>
 </html>
