--- a/ispa-esports.html
+++ b/ispa-esports.html
@@ -10,13 +10,13 @@
 
         /* All html objects will be wrapped in the #wrap div */
 
-        @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
         .goal-cont {
             color: #ffffff;
             font-weight: bold;
             background: center;
-            font-family: 'Tw Cen MT';
+            font-family: 'Poppins', sans-serif;
             font-size: 40px;
             text-align: left;
             padding-top:10px;
