--- a/ispa-esports.html
+++ b/ispa-esports.html
@@ -39,7 +39,7 @@
       <!--<span id='goal-current'>0</span> / <span id='goal-total'>0</span>-->
 
       INSIGHT PA
-      <span class="highlighted-text">ESPORTS</span>
+      <span class="highlighted-text">MS ESPORTS</span>
 
     </span>
   </div>
